--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
 
       const commentsHTML = comments
         .map((comment, index) => {
-          if (comment.isLiked) {
-            return `
-            <li class="comment">
+          return `
+            <li class="comment" data-item=${index}>
               <div class="comment-header">
                 <div>${comment.author}</div>
                 <div>${comment.date}</div>
@@ -115,36 +114,30 @@
               <div class="comment-footer">
                 <div class="likes">
                   <span class="likes-counter">${comment.likes}</span>
-                  <button class="like-button -active-like" data-index="${index}"></button>
+                  <button class="like-button ${
+                    comment.isLiked ? "-active-like" : ""
+                  }" data-index="${index}"></button>
                 </div>
               </div>
             </li>
             `;
-          } else {
-            return `
-            <li class="comment">
-              <div class="comment-header">
-                <div>${comment.author}</div>
-                <div>${comment.date}</div>
-              </div>
-              <div class="comment-body">
-                <div class="comment-text">
-                  ${comment.comment}
-                </div>
-              </div>
-              <div class="comment-footer">
-                <div class="likes">
-                  <span class="likes-counter">${comment.likes}</span>
-                  <button class="like-button" data-index="${index}"></button>
-                </div>
-              </div>
-            </li>
-            `;
-          }
         })
         .join("");
 
       list.innerHTML = commentsHTML;
+
+      const commentsElements = document.querySelectorAll(".comment");
+
+      for (const editComment of commentsElements) {
+        editComment.addEventListener("click", (event) => {
+          const i = editComment.dataset.item;
+
+          textarea.value = `
+          >${comments[i].comment}
+          ${comments[i].author}
+          `;
+        });
+      }
 
       initLikesListeners();
     };
@@ -183,9 +176,17 @@
       }
 
       comments.push({
-        author: `${nameInput.value}`,
+        author: `${nameInput.value
+          .replaceAll("<", "&lt;")
+          .replaceAll(">", "&gt;")
+          .replaceAll('"', "&quot;")
+          .replaceAll("&", "&amp;")}`,
         date: `${day}.${month}.${year} ${hour}:${minutes}`,
-        comment: `${textarea.value}`,
+        comment: `${textarea.value
+          .replaceAll("<", "&lt;")
+          .replaceAll(">", "&gt;")
+          .replaceAll('"', "&quot;")
+          .replaceAll("&", "&amp;")}`,
         likes: 0,
         isLiked: false,
       });
@@ -269,7 +270,7 @@
       const likes = document.querySelectorAll(".likes");
 
       for (let likeBtn of likesBtns) {
-        likeBtn.addEventListener("click", () => {
+        likeBtn.addEventListener("click", (event) => {
           const i = likeBtn.dataset.index;
           if (!comments[i].isLiked) {
             comments[i].isLiked = true;
@@ -279,6 +280,7 @@
             comments[i].likes = comments[i].likes - 1;
           }
 
+          event.stopPropagation();
           renderComments();
         });
       }
