--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     <div id="app"></div>
   </body>
 
-  <script type="module" src="./JS/main.js"></script>
+  <!-- <script type="module" src="./JS/main.js"></script> -->
+  <script src="./dist/main.js"></script>
 </html>
